--- a/board.html
+++ b/board.html
@@ -35,8 +35,9 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
+          <div class="drag-area"></div>
           <div
-            class="drag-area"
+            id="to-do-id"
             ondrop="moveTo('toDo')"
             overgleave="removeHighlight('toDo')"
             ondragover="allowDrop(event); highlight('toDo')">
@@ -52,8 +53,9 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
+          <div class="drag-area"></div>
           <div
-            class="drag-area"
+            id="in-progress-id"
             ondrop="moveTo('inProgress')"
             overgleave="removeHighlight('inProgress')"
             ondragover="allowDrop(event); highlight('inProgress')">
@@ -69,8 +71,9 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
+          <div class="drag-area"></div>
           <div
-            class="drag-area"
+            id="await-feedback-id"
             ondrop="moveTo('awaitFeedback')"
             overgleave="removeHighlight('awaitFeedback')"
             ondragover="allowDrop(event); highlight('awaitFeedback')">
@@ -86,8 +89,9 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
+          <div class="drag-area"></div>
           <div
-            class="drag-area"
+            id="done-id"
             ondrop="moveTo('done')"
             overgleave="removeHighlight('done')"
             ondragover="allowDrop(event); highlight('done')">
