succsess msg included for addtask and contacts

--- a/contacts.html
+++ b/contacts.html
@@ -51,6 +51,9 @@
       <div id="edit-overlay-id" class="ac-overlay d-none"></div>
       <div id="show-overlay-id" class="show-overlay d-none"></div>
       <div id="loader-id" class="loader d-none"></div>
+      <div id="contacts-success-msg-id" class="success-msg-popup d-none">
+        <span>Contact successfully created</span>
+      </div>
     </section>
 
     <div w3-include-html="./assets/templates/footer.html"></div>
