added hover effects in  add tasks

--- a/add_task.html
+++ b/add_task.html
@@ -67,6 +67,15 @@
               <ul>
                 <li onclick="selectCategory(this)">Technical Task</li>
                 <li onclick="selectCategory(this)">User Story</li>
+                <li onclick="selectCategory(this)">Bug</li>
+                <li onclick="selectCategory(this)">Feature Request</li>
+                <li onclick="selectCategory(this)">Enhancement</li>
+                <li onclick="selectCategory(this)">Documentation</li>
+                <li onclick="selectCategory(this)">Testing</li>
+                <li onclick="selectCategory(this)">Infrastructure</li>
+                <li onclick="selectCategory(this)">Design</li>
+                <li onclick="selectCategory(this)">Research</li>
+                <li onclick="selectCategory(this)">Other</li>
               </ul>
             </div>
           </div>
