--- a/board.html
+++ b/board.html
@@ -35,13 +35,12 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
-          <div class="drag-area"></div>
+          <div class="drag-area">No tasks To do</div>
           <div
             id="to-do-id"
             ondrop="moveTo('toDo')"
             overgleave="removeHighlight('toDo')"
             ondragover="allowDrop(event); highlight('toDo')">
-            No tasks To do
           </div>
         </div>
       </div>
@@ -53,13 +52,12 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
-          <div class="drag-area"></div>
+          <div class="drag-area"> No tasks To do</div>
           <div
             id="in-progress-id"
             ondrop="moveTo('inProgress')"
             overgleave="removeHighlight('inProgress')"
             ondragover="allowDrop(event); highlight('inProgress')">
-            No tasks To do
           </div>
         </div>
       </div>
@@ -71,13 +69,12 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
-          <div class="drag-area"></div>
+          <div class="drag-area">No tasks To do</div>
           <div
             id="await-feedback-id"
             ondrop="moveTo('awaitFeedback')"
             overgleave="removeHighlight('awaitFeedback')"
             ondragover="allowDrop(event); highlight('awaitFeedback')">
-            No tasks To do
           </div>
         </div>
       </div>
@@ -89,13 +86,12 @@
               <img src="./assets/img/add_task_board_2.png" alt="add task" />
             </button>
           </div>
-          <div class="drag-area"></div>
+          <div class="drag-area">No tasks To do</div>
           <div
             id="done-id"
             ondrop="moveTo('done')"
             overgleave="removeHighlight('done')"
             ondragover="allowDrop(event); highlight('done')">
-            No tasks To do
           </div>
         </div>
       </div>
