--- a/summary.html
+++ b/summary.html
@@ -16,7 +16,7 @@
     <title>Summary</title>
   </head>
 
-  <body onload="includeHTML(); updateGreeting()">
+  <body id="summary-body-id" class="d-none" onload="includeHTML(); initSummary()">
     <div w3-include-html="./assets/templates/header.html"></div>
 
     <section id="summary-section-id">
