--- a/contacts.html
+++ b/contacts.html
@@ -19,9 +19,8 @@
     <script defer src="./js/global.js"></script>
   </head>
 
-  <body onload="contactsInit(); includeHTML();">
+  <body id="contacts-body-id" class="d-none" onload="contactsInit(); includeHTML();">
     <div w3-include-html="./assets/templates/header.html"></div>
-
     <section id="contacts-section-id">
       <div id="contacts-wrapper-id" class="contacts-wrapper">
         <div id="all-contacts-id" class="all-contacts">
