--- a/summary.html
+++ b/summary.html
@@ -20,80 +20,82 @@
 
     <section>
       <div class="summary-wrapper">
-        <div class="summary-column">
-          <div class="summary-content">
-            <div class="summary-title">
-              <h1>Join 360</h1>
-              <span>Key Metrics at a Glance</span>
-              <div class="separator"></div>
-            </div>
-
-            <div class="summary-rows">
-              <div class="summary-row">
-                <a class="box-1">
-                  <img class="summary-icon" src="./assets/img/to_do.png" alt="to-do" />
-                  <div>
-                    <div class="summary-change-content">1</div>
-                    To-do
-                  </div>
-                </a>
-
-                <div class="box-1">
-                  <img class="summary-icon" src="./assets/img/done.png" alt="done" />
-                  <div>
-                    <div class="summary-change-content">1</div>
-                    Done
-                  </div>
-                </div>
-              </div>
-              <div class="summary-row">
-                <div class="box-2">
-                  <div class="box-1">
-                    <img class="summary-icon" src="./assets/img/urgent.png" alt="urgent" />
+        <div class="summary-content">
+          <div class="summary-title">
+            <h1>Join 360</h1>
+            <div class="separator-desktop"></div>
+            <span>Key Metrics at a Glance</span>
+            <div class="separator-mobile"></div>
+          </div>
+          <div class="summary-column">
+            <div class="summary-overview">
+              <div class="summary-rows">
+                <div class="summary-row">
+                  <a class="box-1">
+                    <img class="summary-icon" src="./assets/img/to_do.png" alt="to-do" />
                     <div>
                       <div class="summary-change-content">1</div>
-                      Urgent
+                      To-do
+                    </div>
+                  </a>
+
+                  <div class="box-1">
+                    <img class="summary-icon" src="./assets/img/done.png" alt="done" />
+                    <div>
+                      <div class="summary-change-content">1</div>
+                      Done
                     </div>
                   </div>
-                  <div class="separator2"></div>
-                  <div class="box-2-2">
-                    <div class="summary-change-content2">February 29,2022</div>
-                    Upcomming deadline
+                </div>
+                <div class="summary-row">
+                  <div class="box-2">
+                    <div class="box-1">
+                      <img class="summary-icon" src="./assets/img/urgent.png" alt="urgent" />
+                      <div>
+                        <div class="summary-change-content">1</div>
+                        Urgent
+                      </div>
+                    </div>
+                    <div class="separator2"></div>
+                    <div class="box-2-2">
+                      <div class="summary-change-content2">February 29,2022</div>
+                      Upcomming deadline
+                    </div>
                   </div>
                 </div>
-              </div>
 
-              <div class="summary-row">
-                <div class="box-3">
-                  <div class="box-2-2">
-                    <div class="summary-change-content">1</div>
-                    Tasks in
-                    <br />
-                    Board
+                <div class="summary-row">
+                  <div class="box-3">
+                    <div class="box-2-2">
+                      <div class="summary-change-content">1</div>
+                      Tasks in
+                      <br />
+                      Board
+                    </div>
                   </div>
-                </div>
 
-                <div class="box-3">
-                  <div class="box-2-2">
-                    <div class="summary-change-content">1</div>
-                    Tasks In
-                    <br />
-                    Progress
+                  <div class="box-3">
+                    <div class="box-2-2">
+                      <div class="summary-change-content">1</div>
+                      Tasks In
+                      <br />
+                      Progress
+                    </div>
                   </div>
-                </div>
-                <div class="box-3">
-                  <div class="box-2-2">
-                    <div class="summary-change-content">1</div>
-                    Awaiting
-                    <br />
-                    feedback
+                  <div class="box-3">
+                    <div class="box-2-2">
+                      <div class="summary-change-content">1</div>
+                      Awaiting
+                      <br />
+                      feedback
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="summary-secondery">
-            <div class="summary-greeting" id="greeting-id"></div>
+            <div class="summary-secondery">
+              <div class="summary-greeting" id="greeting-id"></div>
+            </div>
           </div>
         </div>
       </div>
