--- a/summary.html
+++ b/summary.html
@@ -29,115 +29,127 @@
           </div>
           <div class="summary-column">
             <div class="summary-overview">
-              <div class="summary-row">
-                <a class="box-1">
-                  <svg
-                    width="40"
-                    height="40"
-                    viewBox="0 0 40 40"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="20" cy="20" r="20" fill="#2A3647" />
-                    <path
-                      d="M17.8932 27.1084L14.6672 25.1506L22.4986 12.2468C23.0393 11.3559 24.1997 11.0721 25.0905 11.6127C25.9813 12.1534 26.2652 13.3138 25.7246 14.2046L17.8932 27.1084Z"
-                      fill="white" />
-                    <path
-                      d="M17.5013 27.7538L14.2754 25.7959L14.6718 27.4164C14.8031 27.9529 15.3443 28.2814 15.8808 28.1502L17.5013 27.7538Z"
-                      fill="white" />
-                  </svg>
-                  <div>
-                    <div class="summary-change-content">
-                      <span>1</span>
-                      <span>To-do</span>
-                    </div>
-                  </div>
-                </a>
-
-                <a class="box-1">
-                  <svg
-                    width="40"
-                    height="40"
-                    viewBox="0 0 40 40"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="20" cy="20" r="20" fill="#2A3647" />
-                    <path
-                      d="M11.3203 20.0001L17.8297 26.4151L28.6788 13.585"
-                      stroke="white"
-                      stroke-width="3"
-                      stroke-linecap="round"
-                      stroke-linejoin="round" />
-                  </svg>
-                  <div>
-                    <div class="summary-change-content">
-                      <span>1</span>
-                      <span>Done</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="summary-row">
-                <a class="box-1">
-                  <svg
-                    width="40"
-                    height="40"
-                    viewBox="0 0 41 40"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="20.5" cy="20" r="20" fill="#FF3D00" />
-                    <g clip-path="url(#clip0_155413_3346)">
+              <div class="summary-row top-section">
+                <div class="top-hover-container">
+                  <a class="box-1 top top-left">
+                    <svg
+                      width="40"
+                      height="40"
+                      viewBox="0 0 40 40"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <circle cx="20" cy="20" r="20" fill="#2A3647" />
                       <path
-                        d="M30.4143 27.4424C30.1469 27.4428 29.8864 27.3565 29.6712 27.1959L20.2677 20.176L10.8642 27.1959C10.7322 27.2947 10.5823 27.3661 10.4229 27.4062C10.2636 27.4463 10.0981 27.4543 9.93574 27.4297C9.77339 27.405 9.61743 27.3483 9.47676 27.2626C9.33609 27.177 9.21347 27.0642 9.11589 26.9306C9.01831 26.797 8.94769 26.6452 8.90806 26.484C8.86844 26.3228 8.86057 26.1553 8.88492 25.991C8.93411 25.6592 9.11152 25.3608 9.37814 25.1614L19.5247 17.5791C19.7397 17.418 20.0002 17.3311 20.2677 17.3311C20.5353 17.3311 20.7957 17.418 21.0108 17.5791L31.1573 25.1614C31.3692 25.3194 31.5263 25.5411 31.6062 25.7948C31.6862 26.0485 31.6848 26.3213 31.6024 26.5743C31.5201 26.8272 31.3608 27.0473 31.1474 27.2032C30.934 27.3591 30.6774 27.4428 30.4143 27.4424Z"
+                        d="M17.8932 27.1084L14.6672 25.1506L22.4986 12.2468C23.0393 11.3559 24.1997 11.0721 25.0905 11.6127C25.9813 12.1534 26.2652 13.3138 25.7246 14.2046L17.8932 27.1084Z"
                         fill="white" />
                       <path
-                        d="M30.4143 20.8076C30.1469 20.8081 29.8865 20.7217 29.6712 20.5612L20.2677 13.5413L10.8642 20.5612C10.5976 20.7606 10.2636 20.8447 9.93575 20.7949C9.60787 20.7451 9.31296 20.5656 9.1159 20.2958C8.91883 20.026 8.83575 19.688 8.88493 19.3562C8.93411 19.0244 9.11153 18.726 9.37814 18.5266L19.5247 10.9443C19.7397 10.7832 20.0002 10.6963 20.2677 10.6963C20.5353 10.6963 20.7957 10.7832 21.0108 10.9443L31.1573 18.5266C31.3692 18.6846 31.5263 18.9063 31.6062 19.16C31.6862 19.4138 31.6848 19.6866 31.6025 19.9395C31.5201 20.1924 31.3608 20.4126 31.1474 20.5685C30.934 20.7244 30.6774 20.8081 30.4143 20.8076Z"
+                        d="M17.5013 27.7538L14.2754 25.7959L14.6718 27.4164C14.8031 27.9529 15.3443 28.2814 15.8808 28.1502L17.5013 27.7538Z"
                         fill="white" />
-                    </g>
-                    <defs>
-                      <clipPath id="clip0_155413_3346">
-                        <rect
-                          width="22.7907"
-                          height="16.7442"
-                          fill="white"
-                          transform="translate(8.87207 10.6978)" />
-                      </clipPath>
-                    </defs>
-                  </svg>
-
-                  <div>
-                    <div class="summary-change-content">
-                      <span>1</span>
-                      <span>Urgent</span>
+                    </svg>
+                    <div>
+                      <div class="summary-change-content">
+                        <span>1</span>
+                        <span>To-do</span>
+                      </div>
                     </div>
-                  </div>
-                </a>
-                <div class="separator2"></div>
-                <div class="summary-info">
-                  <span>February 29,2022</span>
-                  <span>Upcomming deadline</span>
+                  </a>
+                </div>
+                <div class="top-hover-container">
+                  <a class="box-1 top top-right">
+                    <svg
+                      width="40"
+                      height="40"
+                      viewBox="0 0 40 40"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <circle cx="20" cy="20" r="20" fill="#2A3647" />
+                      <path
+                        d="M11.3203 20.0001L17.8297 26.4151L28.6788 13.585"
+                        stroke="white"
+                        stroke-width="3"
+                        stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                    <div>
+                      <div class="summary-change-content">
+                        <span>1</span>
+                        <span>Done</span>
+                      </div>
+                    </div>
+                  </a>
                 </div>
               </div>
-              <div class="summary-row">
-                <div class="tasks-info">
-                  <span>1</span>
-                  <span
-                    >Tasks in<br />
-                    Board</span
-                  >
+
+              <div class="middle-hover-container">
+                <div class="summary-row middle-section">
+                  <a class="middle-box">
+                    <svg
+                      width="40"
+                      height="40"
+                      viewBox="0 0 41 40"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <circle cx="20.5" cy="20" r="20" fill="#FF3D00" />
+                      <g clip-path="url(#clip0_155413_3346)">
+                        <path
+                          d="M30.4143 27.4424C30.1469 27.4428 29.8864 27.3565 29.6712 27.1959L20.2677 20.176L10.8642 27.1959C10.7322 27.2947 10.5823 27.3661 10.4229 27.4062C10.2636 27.4463 10.0981 27.4543 9.93574 27.4297C9.77339 27.405 9.61743 27.3483 9.47676 27.2626C9.33609 27.177 9.21347 27.0642 9.11589 26.9306C9.01831 26.797 8.94769 26.6452 8.90806 26.484C8.86844 26.3228 8.86057 26.1553 8.88492 25.991C8.93411 25.6592 9.11152 25.3608 9.37814 25.1614L19.5247 17.5791C19.7397 17.418 20.0002 17.3311 20.2677 17.3311C20.5353 17.3311 20.7957 17.418 21.0108 17.5791L31.1573 25.1614C31.3692 25.3194 31.5263 25.5411 31.6062 25.7948C31.6862 26.0485 31.6848 26.3213 31.6024 26.5743C31.5201 26.8272 31.3608 27.0473 31.1474 27.2032C30.934 27.3591 30.6774 27.4428 30.4143 27.4424Z"
+                          fill="white" />
+                        <path
+                          d="M30.4143 20.8076C30.1469 20.8081 29.8865 20.7217 29.6712 20.5612L20.2677 13.5413L10.8642 20.5612C10.5976 20.7606 10.2636 20.8447 9.93575 20.7949C9.60787 20.7451 9.31296 20.5656 9.1159 20.2958C8.91883 20.026 8.83575 19.688 8.88493 19.3562C8.93411 19.0244 9.11153 18.726 9.37814 18.5266L19.5247 10.9443C19.7397 10.7832 20.0002 10.6963 20.2677 10.6963C20.5353 10.6963 20.7957 10.7832 21.0108 10.9443L31.1573 18.5266C31.3692 18.6846 31.5263 18.9063 31.6062 19.16C31.6862 19.4138 31.6848 19.6866 31.6025 19.9395C31.5201 20.1924 31.3608 20.4126 31.1474 20.5685C30.934 20.7244 30.6774 20.8081 30.4143 20.8076Z"
+                          fill="white" />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_155413_3346">
+                          <rect
+                            width="22.7907"
+                            height="16.7442"
+                            fill="white"
+                            transform="translate(8.87207 10.6978)" />
+                        </clipPath>
+                      </defs>
+                    </svg>
+
+                    <div>
+                      <div class="summary-change-content">
+                        <span>1</span>
+                        <span>Urgent</span>
+                      </div>
+                    </div>
+                  </a>
+                  <div class="separator2"></div>
+                  <div class="summary-info">
+                    <span>February 29, 2022</span>
+                    <span>Upcomming deadline</span>
+                  </div>
                 </div>
-                <div class="tasks-info">
-                  <span>1</span>
-                  <span
-                    >Tasks in<br />
-                    Progress</span
-                  >
+              </div>
+              <div class="summary-row bottom-section">
+                <div class="bottom-hover-container">
+                  <div class="tasks-info hover-left">
+                    <span>1</span>
+                    <span
+                      >Tasks in<br />
+                      Board</span
+                    >
+                  </div>
                 </div>
-                <div class="tasks-info">
-                  <span>1</span>
-                  <span
-                    >Tasks in<br />
-                    feedback</span
-                  >
+                <div class="bottom-hover-container">
+                  <div class="tasks-info hover-middle">
+                    <span>1</span>
+                    <span
+                      >Tasks in<br />
+                      Progress</span
+                    >
+                  </div>
+                </div>
+                <div class="bottom-hover-container">
+                  <div class="tasks-info hover-right">
+                    <span>1</span>
+                    <span
+                      >Tasks in<br />
+                      feedback</span
+                    >
+                  </div>
                 </div>
               </div>
             </div>
