--- a/summary.html
+++ b/summary.html
@@ -153,7 +153,7 @@
                 </div>
               </div>
             </div>
-            <div class="summary-secondery">
+            <div class="summary-secondary">
               <div class="summary-greeting" id="greeting-id"></div>
             </div>
           </div>
