--- a/summary.html
+++ b/summary.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/summary/summary.css" />
+    <link rel="stylesheet" href="./css/summary/summary-responsive.css" />
     <script defer src="./js/includeHTML.js"></script>
     <script defer src="./js/global.js"></script>
     <script defer src="./js/summary/summary.js"></script>
