summary: circle gets bigger when user is hovering

--- a/board.html
+++ b/board.html
@@ -36,10 +36,7 @@
             </button>
           </div>
           <div class="drag-area">No tasks To do</div>
-          <div
-            id="to-do-id"
-            ondrop="moveTo('toDo')"
-            ondragover="allowDrop(event)"></div>
+          <div id="to-do-id" ondrop="moveTo('toDo')" ondragover="allowDrop(event)"></div>
         </div>
       </div>
       <div>
@@ -81,10 +78,7 @@
             </button>
           </div>
           <div class="drag-area">No tasks To do</div>
-          <div
-            id="done-id"
-            ondrop="moveTo('done')"
-            ondragover="allowDrop(event)"></div>
+          <div id="done-id" ondrop="moveTo('done')" ondragover="allowDrop(event)"></div>
         </div>
       </div>
     </div>
