privacy resonsive ready

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -15,21 +15,21 @@
   <body onload="policyInit();">
     <div w3-include-html="./assets/templates/header.html"></div>
     <section class="legal-style">
+      <div class="legal-back-arrow">
+        <svg
+          width="25"
+          height="24"
+          viewBox="0 0 25 23"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M6.00972 9.88554H23.1871C24.0362 9.88554 24.7246 10.5739 24.7246 11.4231C24.7246 12.2722 24.0362 12.9606 23.1871 12.9606H6.00972L13.17 20.1209C13.7704 20.7213 13.7704 21.6946 13.17 22.295C12.5697 22.8954 11.5963 22.8954 10.996 22.295L1.53824 12.8373C0.757188 12.0562 0.757188 10.7899 1.53824 10.0089L10.996 0.55115C11.5963 -0.0492049 12.5697 -0.0492048 13.17 0.55115C13.7704 1.1515 13.7704 2.12487 13.17 2.72523L6.00972 9.88554Z"
+            fill="#29ABE2" />
+        </svg>
+      </div>
       <div class="legal-notice-content">
         <div>
           <div class="legal-header">
-            <div class="legal-back-arrow">
-              <svg
-                width="25"
-                height="24"
-                viewBox="0 0 25 23"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M6.00972 9.88554H23.1871C24.0362 9.88554 24.7246 10.5739 24.7246 11.4231C24.7246 12.2722 24.0362 12.9606 23.1871 12.9606H6.00972L13.17 20.1209C13.7704 20.7213 13.7704 21.6946 13.17 22.295C12.5697 22.8954 11.5963 22.8954 10.996 22.295L1.53824 12.8373C0.757188 12.0562 0.757188 10.7899 1.53824 10.0089L10.996 0.55115C11.5963 -0.0492049 12.5697 -0.0492048 13.17 0.55115C13.7704 1.1515 13.7704 2.12487 13.17 2.72523L6.00972 9.88554Z"
-                  fill="#29ABE2" />
-              </svg>
-            </div>
             <h1>Legal Notice</h1>
           </div>
 
@@ -110,23 +110,20 @@
               including but not limited to the implied warranties of merchantability, fitness for a
               particular purpose, and non-infringement. In no event will we, the listed students, or
               the
-              <span>Developer Akademie</span>
-              , be liable for any direct, indirect, incidental, special, consequential or exemplary
-              damages, including but not limited to, damages for loss of profits, goodwill, use,
-              data, or other intangible losses, even if we have been advised of the possibility of
-              such damages, arising out of or in connection with the use or performance of
-              <span>Join</span>
-              .
+              <span>Developer Akademie</span>, be liable for any direct, indirect, incidental,
+              special, consequential or exemplary damages, including but not limited to, damages for
+              loss of profits, goodwill, use, data, or other intangible losses, even if we have been
+              advised of the possibility of such damages, arising out of or in connection with the
+              use or performance of <span>Join</span>.
             </p>
           </div>
           <div class="legal-indemnity">
             <h3>Indemnity</h3>
             <p>
               You agree to indemnify, defend and hold harmless us, the listed students, the
-              <span>Developer Akademie</span>
-              , and our affiliates, partners, officers, directors, agents, and employees, from and
-              against any claim, demand, loss, damage, cost, or liability (including reasonable
-              legal fees) arising out of or relating to your use of
+              <span>Developer Akademie</span>, and our affiliates, partners, officers, directors,
+              agents, and employees, from and against any claim, demand, loss, damage, cost, or
+              liability (including reasonable legal fees) arising out of or relating to your use of
               <span>Join</span>
               and/or your breach of this Legal Notice.
               <br />
