legal and policy navigation ready

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -16,7 +16,7 @@
     <div w3-include-html="./assets/templates/header.html"></div>
     <section class="policy-style">
       <div class="policy-notice-content">
-        <div class="legal-back-arrow">
+        <div class="legal-back-arrow" onclick="goBack()">
           <svg
             width="25"
             height="24"
