--- a/legal_notice.html
+++ b/legal_notice.html
@@ -15,7 +15,7 @@
   <body onload="policyInit();">
     <div w3-include-html="./assets/templates/header.html"></div>
     <section class="legal-style">
-      <div class="legal-back-arrow">
+      <div class="legal-back-arrow" onclick="goBack()">
         <svg
           width="25"
           height="24"
