--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/legal_docs/legal.css" />
-    <script defer src="./js/includeHTML.js"></script>
     <script defer src="./js/legal_docs/legal_docs.js"></script>
     <script defer src="./js/global.js"></script>
     <title>Privacy Policy</title>
   </head>
-  <body onload="privacyInit();">
-    <div w3-include-html="./assets/templates/header.html"></div>
+  <body onload="legalsInit();">
+    <header id="header-id" class="header"></header>
     <section class="policy-style">
       <div class="policy-notice-content">
         <div class="legal-back-arrow" onclick="goBack()">
@@ -254,6 +253,6 @@
         </div>
       </div>
     </section>
-    <div w3-include-html="./assets/templates/footer.html"></div>
+    <footer id="footer-id" class="footer"></footer>
   </body>
 </html>
