--- a/help.html
+++ b/help.html
@@ -2,89 +2,137 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/legal_docs/legal.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="./js/legal_docs/legal_docs.js"></script>
+    <script defer src="./js/includeHTML.js"></script>
+    <script defer src="./js/global.js"></script>
     <title>Help</title>
-    <link rel="stylesheet" href="./css/daten.css" />
   </head>
-  <body>
-    <div>
-      <h1>Help</h1>
-      <p>
-        Welcome to the help page for
-        <span>Join</span>
-        , your guide to using our kanban project management tool. Here, we'll provide an overview of what
-        <span>Join</span>
-        is, how it can benefit you, and how to use it.
-      </p>
+  <body onload="helpInit()">
+    <div w3-include-html="./assets/templates/header.html"></div>
+    <section class="help-style">
+      <div class="legal-back-arrow" onclick="goBack()">
+        <svg
+          width="25"
+          height="24"
+          viewBox="0 0 25 23"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M6.00972 9.88554H23.1871C24.0362 9.88554 24.7246 10.5739 24.7246 11.4231C24.7246 12.2722 24.0362 12.9606 23.1871 12.9606H6.00972L13.17 20.1209C13.7704 20.7213 13.7704 21.6946 13.17 22.295C12.5697 22.8954 11.5963 22.8954 10.996 22.295L1.53824 12.8373C0.757188 12.0562 0.757188 10.7899 1.53824 10.0089L10.996 0.55115C11.5963 -0.0492049 12.5697 -0.0492048 13.17 0.55115C13.7704 1.1515 13.7704 2.12487 13.17 2.72523L6.00972 9.88554Z"
+            fill="#29ABE2" />
+        </svg>
+      </div>
+      <div class="help-content">
+        <h1>Help</h1>
+        <div class="help-welcome">
+          <p>
+            Welcome to the help page for
+            <span>Join</span>
+            , your guide to using our kanban project management tool. Here, we'll provide an
+            overview of what
+            <span>Join</span>
+            is, how it can benefit you, and how to use it.
+          </p>
+        </div>
+        <div class="help-whatIs">
+          <h2>What is Join?</h2>
+          <p>
+            <span>Join</span>
+            is a kanban-based project management tool designed and built by a group of dedicated
+            students as part of their web development bootcamp at the Developer Akademie.
+            <br />
+            <br />
+            Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize
+            work, limit work-in-progress, and maximize efficiency (or flow).
+            <span>Join</span>
+            leverages the principles of kanban to help users manage their tasks and projects in an
+            intuitive, visual interface.
+            <br />
+            <br />
+            It is important to note that
+            <span>Join</span>
+            is designed as an educational exercise and is not intended for extensive business usage.
+            While we strive to ensure the best possible user experience, we cannot guarantee
+            consistent availability, reliability, accuracy, or other aspects of quality regarding
+            <span>Join</span>
+            .
+          </p>
+        </div>
+        <div class="help-howtoUse">
+        <h2>How to use it</h2>
+        <p>
+          Here is a step-by-step guide on how to use
+          <span>Join</span>:
+        </p>
+        <div class="help-list">
+          <ol type="1">
+            <li>
+              <h3>Exploring the Board</h3>
+              <p>
+                When you log in to
+                <span>Join</span>
+                , you'll find a default board. This board represents your project and contains four
+                default lists: "To Do", "In Progress", “Await feedback” and "Done".
+              </p>
+            </li>
+            <li>
+              <h3>Creating Contacts</h3>
+              <p>
+                In
+                <span>Join</span>, you can add contacts to collaborate on your projects. Go to the "Contacts" section,
+                click on "New contact", and fill in the required information. Once added, these
+                contacts can be assigned tasks and they can interact with the tasks on the board.
+              </p>
+            </li>
+            <li>
+              <h3>Adding Cards</h3>
+              <p>
+                Now that you've added your contacts, you can start adding cards. Cards represent
+                individual tasks. Click the "+" button under the appropriate list to create a new
+                card. Fill in the task details in the card, like task name, description, due date,
+                assignees, etc.
+              </p>
+            </li>
+            <li>
+              <h3>Moving Cards</h3>
+              <p>
+                As the task moves from one stage to another, you can reflect that on the board by
+                dragging and dropping the card from one list to another.
+              </p>
+            </li>
+            <li>
+              <h3>Deleting Cards</h3>
+              <p>
+                Once a task is completed, you can either move it to the "Done" list or delete it.
+                Deleting a card will permanently remove it from the board. Please exercise caution
+                when deleting cards, as this action is irreversible.
+              </p>
+            </li>
+          </ol>
+        </div>
+        <div class="help-remember">
+          <p>
+            Remember that using
+            <span>Join</span>
+            effectively requires consistent updates from you and your team to ensure the board
+            reflects the current state of your project. 
+          </p>
+          <p>
+            Have more questions about  
+            <span>Join</span>? Feel free to contact us at <a href="mailto:info@developer-akademie.de">info@developer-akademie.de</a>. We're here to help you!
+          </p>
+        </div>
+        <div class="help-enjoy">
+          <h2>Enjoy using Join!</h2>
 
-      <h2>What is Join?</h2>
-      <p>
-        <span>Join</span>
-        is a kanban-based project management tool designed and built by a group of dedicated students as part of their web development bootcamp at the Developer Akademie.
-        <br />
-        <br />
-        Kanban, a Japanese term meaning "billboard", is a highly effective method to visualize work, limit work-in-progress, and maximize efficiency (or flow).
-        <span>Join</span>
-        leverages the principles of kanban to help users manage their tasks and projects in an intuitive, visual interface.
-        <br />
-        <br />
-        It is important to note that
-        <span>Join</span>
-        is designed as an educational exercise and is not intended for extensive business usage. While we strive to ensure the best possible user experience, we cannot guarantee consistent
-        availability, reliability, accuracy, or other aspects of quality regarding
-        <span>Join</span>
-        .
-      </p>
-      <h2>How to use it</h2>
-      <p>
-        Here is a step-by-step guide on how to use
-        <span>Join</span>
-        :
-      </p>
-      <ol type="1">
-        <li>
-          <h3>Exploring the Board</h3>
-          <p>
-            When you log in to
-            <span>Join</span>
-            , you'll find a default board. This board represents your project and contains four default lists: "To Do", "In Progress", “Await feedback” and "Done".
-          </p>
-        </li>
-        <li>
-          <h3>Creating Contacts</h3>
-          <p>
-            In
-            <span>Join</span>
-            , you can add contacts to collaborate on your projects. Go to the "Contacts" section, click on "New contact", and fill in the required information. Once added, these contacts can be
-            assigned tasks and they can interact with the tasks on the board.
-          </p>
-        </li>
-        <li>
-          <h3>Adding Cards</h3>
-          <p>
-            Now that you've added your contacts, you can start adding cards. Cards represent individual tasks. Click the "+" button under the appropriate list to create a new card. Fill in the task
-            details in the card, like task name, description, due date, assignees, etc.
-          </p>
-        </li>
-        <li>
-          <h3>Moving Cards</h3>
-          <p>As the task moves from one stage to another, you can reflect that on the board by dragging and dropping the card from one list to another.</p>
-        </li>
-        <li>
-          <h3>Deleting Cards</h3>
-          <p>
-            Once a task is completed, you can either move it to the "Done" list or delete it. Deleting a card will permanently remove it from the board. Please exercise caution when deleting cards, as
-            this action is irreversible. Remember that using
-            <span>Join</span>
-            effectively requires consistent updates from you and your team to ensure the board reflects the current state of your project. Have more questions about
-            <span>Join</span>
-            ? Feel free to contact us at info@developer-akademie.de. We're here to help you!
-          </p>
-        </li>
-      </ol>
-      <h2>Enjoy using Join!</h2>
-    </div>
-
-    <img onclick="" class="daten-arrow" src="./assets/img/arrow_left_line.png" alt="back-arrow-btn" />
+        </div>
+      </div>
+    </section>
+    <div w3-include-html="./assets/templates/footer.html"></div>
   </body>
 </html>
