starting  login logo animation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body onload="init();">
     <div class="logo">
-      <img src="./assets/img/logo.png" alt="join Logo" />
+      <img src="./assets/svg/logo.svg" alt="join Logo" />
     </div>
     <div class="container">
       <div id="success-msg-id" class="success-msg-popup d-none">
