--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>Contacts</title>
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/contacts/add_contacts.css" />
