--- a/error_page.html
+++ b/error_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/error_page/error_page.css" />
     <script defer src="./js/includeHTML.js"></script>
