--- a/help.html
+++ b/help.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/legal_docs/legal.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="./js/legal_docs/legal_docs.js"></script>
     <script defer src="./js/includeHTML.js"></script>
     <script defer src="./js/global.js"></script>
